<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="112dp"
        android:layout_height="164dp"
        android:layout_margin="30dp"
        android:contentDescription="@string/tvShow_tabs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/gangsta" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/poster"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/air"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="@+id/poster"
        android:text="@string/rank" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="rank"
        app:layout_constraintBottom_toBottomOf="@+id/rate"
        app:layout_constraintStart_toEndOf="@+id/rate" />


    <TextView
        android:id="@+id/air"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/stud"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="@+id/rate"
        android:text="@string/aired" />

    <TextView
        android:id="@+id/aired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="aired"
        app:layout_constraintBottom_toBottomOf="@+id/air"
        app:layout_constraintStart_toEndOf="@+id/air" />

    <TextView
        android:id="@+id/stud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/poster"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="@+id/air"
        android:text="@string/studio" />

    <TextView
        android:id="@+id/studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="studio"
        app:layout_constraintBottom_toBottomOf="@+id/stud"
        app:layout_constraintStart_toEndOf="@+id/stud" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster"
        tools:text="description" />

</androidx.constraintlayout.widget.ConstraintLayout>